:tada: Initialize template
Signed-off-by: mathieu.brunot <mathieu.brunot@monogramm.io>

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 # ERPNext configuration
 ########################################
 
-ERPNEXT_HOME=/srv/erpnext_template/frappe
+ERPNEXT_HOME=/srv/frappe_pwa/frappe
 
 ERPNEXT_SITE=localhost
 
@@ -20,5 +20,5 @@ ERPNEXT_DB_NAME=erpnext
 ERPNEXT_DB_PWD=erpnext_password
 
 # Local development configuration
-IMAGE_NAME=docker-erpnext:erpnext_template-dev
-FRAPPE_APP_TO_TEST=erpnext_template
+IMAGE_NAME=docker-erpnext:frappe_pwa-dev
+FRAPPE_APP_TO_TEST=frappe_pwa
