--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ locale
 *.egg-info
 dist/
 build/
-erpnext_template/docs/current
+frappe_pwa/docs/current
 .vscode
 .idea/
 *.iml
@@ -194,4 +194,4 @@ typings/
 public/
 services/
 
-erpnext_template/www/
+frappe_pwa/www/
