--- a/.travis/docker-compose.mariadb.yml
+++ b/.travis/docker-compose.mariadb.yml
@@ -69,7 +69,7 @@ services:
       - DOCKER_DB_ALLOWED_HOSTS=
       - DOCKER_APPS_TIMEOUT=900
       # Frappe setup
-      - FRAPPE_APP_INIT=erpnext erpnext_template
+      - FRAPPE_APP_INIT=erpnext frappe_pwa
       - FRAPPE_DEFAULT_PROTOCOL=http://
       - FRAPPE_DEFAULT_SITE=${ERPNEXT_SITE}
       - FRAPPE_LOGGING=1
