--- a/frappe_pwa/frappe_pwa/doctype/web_app_manifest/web_app_manifest.json
+++ b/frappe_pwa/frappe_pwa/doctype/web_app_manifest/web_app_manifest.json
@@ -259,6 +259,38 @@
    "collapsible": 0,
    "columns": 0,
    "fetch_if_empty": 0,
+   "fieldname": "description_section_break",
+   "fieldtype": "Section Break",
+   "hidden": 0,
+   "ignore_user_permissions": 0,
+   "ignore_xss_filter": 0,
+   "in_filter": 0,
+   "in_global_search": 0,
+   "in_list_view": 0,
+   "in_standard_filter": 0,
+   "length": 0,
+   "no_copy": 0,
+   "permlevel": 0,
+   "precision": "",
+   "print_hide": 0,
+   "print_hide_if_no_value": 0,
+   "read_only": 0,
+   "remember_last_selected_value": 0,
+   "report_hide": 0,
+   "reqd": 0,
+   "search_index": 0,
+   "set_only_once": 0,
+   "translatable": 0,
+   "unique": 0
+  },
+  {
+   "allow_bulk_edit": 0,
+   "allow_in_quick_entry": 0,
+   "allow_on_submit": 0,
+   "bold": 0,
+   "collapsible": 0,
+   "columns": 0,
+   "fetch_if_empty": 0,
    "fieldname": "description",
    "fieldtype": "Long Text",
    "hidden": 0,
@@ -799,7 +831,7 @@
  "issingle": 1,
  "istable": 0,
  "max_attachments": 10,
- "modified": "2020-06-08 02:14:47.956568",
+ "modified": "2020-06-15 15:31:35.898203",
  "modified_by": "Administrator",
  "module": "Frappe PWA",
  "name": "Web App Manifest",
