--- a/frappe_pwa/frappe_pwa/doctype/web_app_manifest_category/web_app_manifest_category.json
+++ b/frappe_pwa/frappe_pwa/doctype/web_app_manifest_category/web_app_manifest_category.json
@@ -4,7 +4,7 @@
  "allow_guest_to_view": 0,
  "allow_import": 0,
  "allow_rename": 0,
- "autoname": "field:name",
+ "autoname": "field:category",
  "beta": 1,
  "creation": "2020-06-08 00:49:38.425570",
  "custom": 0,
@@ -22,7 +22,7 @@
    "collapsible": 0,
    "columns": 0,
    "fetch_if_empty": 0,
-   "fieldname": "name",
+   "fieldname": "category",
    "fieldtype": "Data",
    "hidden": 0,
    "ignore_user_permissions": 0,
@@ -31,7 +31,7 @@
    "in_global_search": 0,
    "in_list_view": 1,
    "in_standard_filter": 0,
-   "label": "Name",
+   "label": "Category",
    "length": 0,
    "no_copy": 0,
    "permlevel": 0,
@@ -58,7 +58,7 @@
  "issingle": 0,
  "istable": 1,
  "max_attachments": 0,
- "modified": "2020-06-08 00:54:47.558156",
+ "modified": "2020-06-15 17:15:14.183239",
  "modified_by": "Administrator",
  "module": "Frappe PWA",
  "name": "Web App Manifest Category",
