--- a/frappe_pwa/frappe_pwa/doctype/web_app_manifest_screenshot/web_app_manifest_screenshot.json
+++ b/frappe_pwa/frappe_pwa/doctype/web_app_manifest_screenshot/web_app_manifest_screenshot.json
@@ -4,7 +4,7 @@
  "allow_guest_to_view": 0,
  "allow_import": 0,
  "allow_rename": 0,
- "autoname": "field:name",
+ "autoname": "field:screenshot",
  "beta": 1,
  "creation": "2020-06-08 01:01:36.865761",
  "custom": 0,
@@ -22,7 +22,7 @@
    "collapsible": 0,
    "columns": 0,
    "fetch_if_empty": 0,
-   "fieldname": "name",
+   "fieldname": "screenshot",
    "fieldtype": "Data",
    "hidden": 0,
    "ignore_user_permissions": 0,
@@ -31,7 +31,7 @@
    "in_global_search": 0,
    "in_list_view": 1,
    "in_standard_filter": 0,
-   "label": "Name",
+   "label": "Screenshot",
    "length": 0,
    "no_copy": 0,
    "permlevel": 0,
@@ -46,39 +46,6 @@
    "set_only_once": 0,
    "translatable": 0,
    "unique": 1
-  },
-  {
-   "allow_bulk_edit": 0,
-   "allow_in_quick_entry": 0,
-   "allow_on_submit": 0,
-   "bold": 0,
-   "collapsible": 0,
-   "columns": 0,
-   "fetch_if_empty": 0,
-   "fieldname": "src",
-   "fieldtype": "Attach Image",
-   "hidden": 0,
-   "ignore_user_permissions": 0,
-   "ignore_xss_filter": 0,
-   "in_filter": 0,
-   "in_global_search": 0,
-   "in_list_view": 0,
-   "in_standard_filter": 0,
-   "label": "Source",
-   "length": 0,
-   "no_copy": 0,
-   "permlevel": 0,
-   "precision": "",
-   "print_hide": 0,
-   "print_hide_if_no_value": 0,
-   "read_only": 0,
-   "remember_last_selected_value": 0,
-   "report_hide": 0,
-   "reqd": 0,
-   "search_index": 0,
-   "set_only_once": 0,
-   "translatable": 0,
-   "unique": 0
   },
   {
    "allow_bulk_edit": 0,
@@ -128,7 +95,7 @@
    "ignore_xss_filter": 0,
    "in_filter": 0,
    "in_global_search": 0,
-   "in_list_view": 0,
+   "in_list_view": 1,
    "in_standard_filter": 0,
    "label": "Type",
    "length": 0,
@@ -141,6 +108,39 @@
    "remember_last_selected_value": 0,
    "report_hide": 0,
    "reqd": 0,
+   "search_index": 0,
+   "set_only_once": 0,
+   "translatable": 0,
+   "unique": 0
+  },
+  {
+   "allow_bulk_edit": 0,
+   "allow_in_quick_entry": 0,
+   "allow_on_submit": 0,
+   "bold": 0,
+   "collapsible": 0,
+   "columns": 0,
+   "fetch_if_empty": 0,
+   "fieldname": "src",
+   "fieldtype": "Attach Image",
+   "hidden": 0,
+   "ignore_user_permissions": 0,
+   "ignore_xss_filter": 0,
+   "in_filter": 0,
+   "in_global_search": 0,
+   "in_list_view": 0,
+   "in_standard_filter": 0,
+   "label": "Source",
+   "length": 0,
+   "no_copy": 0,
+   "permlevel": 0,
+   "precision": "",
+   "print_hide": 0,
+   "print_hide_if_no_value": 0,
+   "read_only": 0,
+   "remember_last_selected_value": 0,
+   "report_hide": 0,
+   "reqd": 1,
    "search_index": 0,
    "set_only_once": 0,
    "translatable": 0,
@@ -158,7 +158,7 @@
  "issingle": 0,
  "istable": 1,
  "max_attachments": 0,
- "modified": "2020-06-08 02:12:08.063441",
+ "modified": "2020-06-15 18:14:29.497527",
  "modified_by": "Administrator",
  "module": "Frappe PWA",
  "name": "Web App Manifest Screenshot",
