--- a/frappe_pwa/frappe_pwa/doctype/web_app_manifest/web_app_manifest.json
+++ b/frappe_pwa/frappe_pwa/doctype/web_app_manifest/web_app_manifest.json
@@ -818,6 +818,40 @@
    "set_only_once": 0,
    "translatable": 0,
    "unique": 0
+  },
+  {
+   "allow_bulk_edit": 0,
+   "allow_in_quick_entry": 0,
+   "allow_on_submit": 0,
+   "bold": 0,
+   "collapsible": 0,
+   "columns": 0,
+   "fetch_if_empty": 0,
+   "fieldname": "help",
+   "fieldtype": "HTML",
+   "hidden": 0,
+   "ignore_user_permissions": 0,
+   "ignore_xss_filter": 0,
+   "in_filter": 0,
+   "in_global_search": 0,
+   "in_list_view": 0,
+   "in_standard_filter": 0,
+   "label": "Help",
+   "length": 0,
+   "no_copy": 0,
+   "options": "<p>Go to <a href=\"Form/Website Settings/Website Settings\">\"Website Settings\"</a> and add into \"HTML HEADER &amp; ROBOTS\" the web app manifest:</p>\n<code>\n<link href=\"/assets/frappe_pwa/manifest.json\" rel=\"manifest\">\n</code>\nand add into \"BANNER\" the link to trigger PWA install\n<code>\n<a href=\"#\" id=\"pwa-install-link\">PWA</a>\n</code>",
+   "permlevel": 0,
+   "precision": "",
+   "print_hide": 0,
+   "print_hide_if_no_value": 0,
+   "read_only": 0,
+   "remember_last_selected_value": 0,
+   "report_hide": 0,
+   "reqd": 0,
+   "search_index": 0,
+   "set_only_once": 0,
+   "translatable": 0,
+   "unique": 0
   }
  ],
  "has_web_view": 0,
@@ -831,7 +865,7 @@
  "issingle": 1,
  "istable": 0,
  "max_attachments": 10,
- "modified": "2020-06-15 15:31:35.898203",
+ "modified": "2020-06-18 08:58:13.353735",
  "modified_by": "Administrator",
  "module": "Frappe PWA",
  "name": "Web App Manifest",
