:bug: Fix manifest.json format
Signed-off-by: mathieu.brunot <mathieu.brunot@monogramm.io>

--- a/frappe_pwa/www/manifest.json
+++ b/frappe_pwa/www/manifest.json
@@ -1,39 +1,19 @@
 {
-  "name": "{{ app_name }}",
-  {% if short_name -%}"short_name": "{{ short_name }}",{%- endif %}
-  {% if theme_color -%}"theme_color": "{{ theme_color }}",{%- endif %}
-  {% if background_color -%}"background_color": "{{ background_color }}",{%- endif %}
-  {% if scope -%}"scope": "{{ scope }}",{%- endif %}
-  {% if start_url -%}"start_url": "{{ start_url }}",{%- endif %}
-  {% if iarc_rating_id -%}"iarc_rating_id": "{{ iarc_rating_id }}",{%- endif %}
-  {% if description -%}"description": "{{ description }}",{%- endif %}
-  {% if display -%}"display": "{{ display }}",{%- endif %}
-  {% if orientation -%}"orientation": "{{ orientation }}",{%- endif %}
-  {% if dir -%}"dir": "{{ dir }}",{%- endif %}
-  {% if lang -%}"lang": "{{ lang }}",{%- endif %}
-  {% if categories -%}"categories": [{% for c in categories %}
-    "{{ c.name }}",{% endfor %}
-  ],{%- endif %}
-  {% if screenshots -%}"screenshots": [{% for s in screenshots %}
-    {
-      "src": "{{ s.src }}"
-      {% if s.sizes -%},"sizes": "{{ s.sizes }}"{%- endif %}
-      {% if s.type -%},"type": "{{ s.type }}"{%- endif %}
-    },{% endfor %}
-  ],{%- endif %}
-  {% if prefer_related_applications -%}"prefer_related_applications": {{ prefer_related_applications }},{%- endif %}
-  {% if related_applications -%}"related_applications": [{% for r in related_applications %}
-    {
-      "platform": "{{ r.platform }}"
-      ,"url": "{{ r.url }}"
-      {% if r.id -%},"id": "{{ r.id }}"{%- endif %}
-    },{% endfor %}
-  ],{%- endif %}
-  "icons": [{% for i in icons %}
-    {
-      "src": "{{ i.src }}"
-      {% if i.sizes -%},"sizes": "{{ i.sizes }}"{%- endif %}
-      {% if i.type -%},"type": "{{ i.type }}"{%- endif %}
-    },{% endfor %}
-  ]
+  "name": "{{ app_name }}"
+  {% if short_name -%},"short_name": "{{ short_name }}"{%- endif %}
+  {% if theme_color -%},"theme_color": "{{ theme_color }}"{%- endif %}
+  {% if background_color -%},"background_color": "{{ background_color }}"{%- endif %}
+  {% if scope -%},"scope": "{{ scope }}"{%- endif %}
+  {% if start_url -%},"start_url": "{{ start_url }}"{%- endif %}
+  {% if iarc_rating_id -%},"iarc_rating_id": "{{ iarc_rating_id }}"{%- endif %}
+  {% if description -%},"description": "{{ description }}"{%- endif %}
+  {% if display -%},"display": "{{ display }}"{%- endif %}
+  {% if orientation -%},"orientation": "{{ orientation }}"{%- endif %}
+  {% if dir -%},"dir": "{{ dir }}"{%- endif %}
+  {% if lang -%},"lang": "{{ lang }}"{%- endif %}
+  {% if categories -%},"categories": {{ categories }}{%- endif %}
+  {% if screenshots -%},"screenshots": {{ screenshots }}{%- endif %}
+  {% if prefer_related_applications -%},"prefer_related_applications": {{ prefer_related_applications }}{%- endif %}
+  {% if related_applications -%},"related_applications": {{ related_applications}}{%- endif %}
+  {% if icons -%},"icons": {{ icons}}{%- endif %}
 }
