:construction: Service Worker setup
Signed-off-by: mathieu.brunot <mathieu.brunot@monogramm.io>

--- a/frappe_pwa/frappe_pwa/doctype/web_app_manifest/web_app_manifest.json
+++ b/frappe_pwa/frappe_pwa/doctype/web_app_manifest/web_app_manifest.json
@@ -823,7 +823,7 @@
  "has_web_view": 0,
  "hide_heading": 0,
  "hide_toolbar": 0,
- "icon": "fa fa-cog",
+ "icon": "fa fa-file-text",
  "idx": 0,
  "image_view": 0,
  "in_create": 0,
@@ -831,7 +831,7 @@
  "issingle": 1,
  "istable": 0,
  "max_attachments": 10,
- "modified": "2020-06-15 15:31:35.898203",
+ "modified": "2020-06-21 23:51:49.770217",
  "modified_by": "Administrator",
  "module": "Frappe PWA",
  "name": "Web App Manifest",
