:truck: Rename breaks

--- a/frappe_pwa/frappe_pwa/doctype/web_app_manifest/web_app_manifest.json
+++ b/frappe_pwa/frappe_pwa/doctype/web_app_manifest/web_app_manifest.json
@@ -192,7 +192,7 @@
    "collapsible": 0,
    "columns": 0,
    "fetch_if_empty": 0,
-   "fieldname": "column_break_11",
+   "fieldname": "help_column_break",
    "fieldtype": "Column Break",
    "hidden": 0,
    "ignore_user_permissions": 0,
@@ -291,7 +291,7 @@
    "collapsible": 0,
    "columns": 0,
    "fetch_if_empty": 0,
-   "fieldname": "section_break_8",
+   "fieldname": "scope_section_break",
    "fieldtype": "Section Break",
    "hidden": 0,
    "ignore_user_permissions": 0,
@@ -926,7 +926,7 @@
    "collapsible": 0,
    "columns": 0,
    "fetch_if_empty": 0,
-   "fieldname": "section_break_25",
+   "fieldname": "is_asked_section_break",
    "fieldtype": "Section Break",
    "hidden": 0,
    "ignore_user_permissions": 0,
