--- a/frappe_pwa/frappe_pwa/doctype/web_app_manifest/web_app_manifest.json
+++ b/frappe_pwa/frappe_pwa/doctype/web_app_manifest/web_app_manifest.json
@@ -21,40 +21,6 @@
    "bold": 0,
    "collapsible": 0,
    "columns": 0,
-   "fetch_if_empty": 0,
-   "fieldname": "lang",
-   "fieldtype": "Link",
-   "hidden": 0,
-   "ignore_user_permissions": 0,
-   "ignore_xss_filter": 0,
-   "in_filter": 0,
-   "in_global_search": 0,
-   "in_list_view": 0,
-   "in_standard_filter": 0,
-   "label": "Lang",
-   "length": 0,
-   "no_copy": 0,
-   "options": "Language",
-   "permlevel": 0,
-   "precision": "",
-   "print_hide": 0,
-   "print_hide_if_no_value": 0,
-   "read_only": 0,
-   "remember_last_selected_value": 0,
-   "report_hide": 0,
-   "reqd": 0,
-   "search_index": 0,
-   "set_only_once": 0,
-   "translatable": 0,
-   "unique": 0
-  },
-  {
-   "allow_bulk_edit": 0,
-   "allow_in_quick_entry": 0,
-   "allow_on_submit": 0,
-   "bold": 0,
-   "collapsible": 0,
-   "columns": 0,
    "default": "Frappe Progressive Web Application",
    "fetch_if_empty": 0,
    "fieldname": "app_name",
@@ -236,7 +202,7 @@
    "label": "Help",
    "length": 0,
    "no_copy": 0,
-   "options": "<center>\n<p>Go to <a href=\"#Form/Website Settings/Website Settings\">Website Settings</a> and add into \"HTML HEADER &amp; ROBOTS\" the web app manifest:</p>\n<p>\n<code>\n&lt;link href=\"/assets/frappe_pwa/manifest.json\" rel=\"manifest\"&gt;\n</code>\n</p>\nand add into \"BANNER\" the link to trigger PWA install\n<p>\n<code>\n&lt;a href=\"#\" id=\"pwa-install-link\"&gt;PWA&lt;/a&gt;\n</code>\n</p>\n</center>",
+   "options": "<center>\n<p>Go to <a href=\"#Form/Website Settings/Website Settings\">Website Settings</a> and add into \"HTML HEADER &amp; ROBOTS\" the web app manifest:</p>\n<p>\n<code>\n&lt;link href=\"/assets/frappe_pwa/manifest.json\" rel=\"manifest\"&gt;\n</code>\n</p>\nor simply click on the following button for automatic setup:\n</p>\n</center>",
    "permlevel": 0,
    "precision": "",
    "print_hide": 0,
@@ -614,6 +580,40 @@
    "search_index": 0,
    "set_only_once": 0,
    "translatable": 1,
+   "unique": 0
+  },
+  {
+   "allow_bulk_edit": 0,
+   "allow_in_quick_entry": 0,
+   "allow_on_submit": 0,
+   "bold": 0,
+   "collapsible": 0,
+   "columns": 0,
+   "fetch_if_empty": 0,
+   "fieldname": "lang",
+   "fieldtype": "Link",
+   "hidden": 0,
+   "ignore_user_permissions": 0,
+   "ignore_xss_filter": 0,
+   "in_filter": 0,
+   "in_global_search": 0,
+   "in_list_view": 0,
+   "in_standard_filter": 0,
+   "label": "Lang",
+   "length": 0,
+   "no_copy": 0,
+   "options": "Language",
+   "permlevel": 0,
+   "precision": "",
+   "print_hide": 0,
+   "print_hide_if_no_value": 0,
+   "read_only": 0,
+   "remember_last_selected_value": 0,
+   "report_hide": 0,
+   "reqd": 0,
+   "search_index": 0,
+   "set_only_once": 0,
+   "translatable": 0,
    "unique": 0
   },
   {
